force-app/main/default/objects/vlocity_ins__DrugInteraction__c/fields/vlocity_ins__Category__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Category__c</fullName>
    <description>These options help categorize the type of interaction.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drug</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>