force-app/main/default/objects/vlocity_ins__DrugInteraction__c/fields/vlocity_ins__Description__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Description__c</fullName>
    <description>Description of the Drug Interaction.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>