force-app/main/default/objects/vlocity_ins__DrugInteraction__c/fields/vlocity_ins__IsActive__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsActive__c</fullName>
    <description>The interaction is active if both the primary and the related drug are active.</description>
    <formula>IF ( AND (vlocity_ins__PrimaryDrugId__r.vlocity_ins__IsActive__c , vlocity_ins__RelatedDrugId__r.vlocity_ins__IsActive__c) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>