force-app/main/default/objects/vlocity_ins__DrugInteraction__c/fields/vlocity_ins__SeverityLevel__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SeverityLevel__c</fullName>
    <description>The options here help capture the severity of the impact of the interaction.</description>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>